Removed container from around the feature widget to stop extra space being added when hidden in the editor.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -12,7 +12,10 @@
 10. Main
 11. Footer
 12. Forms
-13. Misc
+13. Slideshow
+14. Misc
+15. Select Fix
+
 */
 
 /* Imports & Includes */
@@ -319,6 +322,9 @@ body.edit {
 
 .widget {
     &.feature {
+        margin: 0 auto;
+        max-width: 1400px;
+        padding: 0 30px;
         .feature-bgimg {
             .content {
                 padding: 60px 0;
@@ -355,24 +361,6 @@ body.edit {
                 }
             }
         }
-    }
-}
-
-.feature {
-    margin: 10px auto 15px;
-    .widget.image span img {
-        width: 100%;
-    }
-}
-
-.sub-feature {
-    background-color: @color-swatch7;
-    font-family: @font-swatch5-font-family;
-    margin-bottom: 20px;
-    padding: 20px;
-    .content {
-        color: @color-swatch4;
-        text-align: center;
     }
 }
 
@@ -759,12 +747,6 @@ div[role="main"] {
             font-family: @font-swatch5-font-family;
             font-size: @font-swatch5-font-size;
             padding-right: 5px;
-            &:after {
-                content: ",";
-            }
-            &:last-child:after, &:first-child:after {
-                display: none;
-            }
         }
     }
     .widget.signupform {
@@ -1009,4 +991,32 @@ div[role="main"] {
     &.gallery {
         margin-left: 0;
     }
+}
+
+/* Select Fix */
+
+select::-ms-expand {
+    display: none;
+}
+ .widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select,
+    select {
+        -moz-appearance: none;
+        text-indent: 0.01px;
+        text-overflow: '';
+}
+
+.widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select,
+.widget.ecomcheckout .delivery select,
+select {
+    cursor: pointer;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0;
+    position: relative;
+    background-image: image('/images/arrow.png');
+    background-repeat: no-repeat;
+    background-position: right 12px center;
+    background-position-x: 95%;
+    background-position-y: 53%;
+    margin-bottom: 12px;
+    padding-right: 33px;
 }
